<resources>
    <string name="app_name">NMedia</string>
    <string name="hi">NMedia!</string>
    <string name="description_share">Share</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="post_text">Post Text</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_cancel">Cancel</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="add_post">Add post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="unknownMsg" translatable="false">Unknown message</string>
    <string name="notification_user_newPost">User %1$s published new post:\n%2$s</string>
    <string name="empty">Empty</string>
    <string name="retry">Retry</string>
    <string name="network_error">Network error</string>
</resources>