<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".activity.FeedFragment">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_post_author_avatar"
            android:src="@drawable/ic_netology_48dp"
            app:layout_constraintBottom_toBottomOf="@id/barrierTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@sample/posts.json/data/authorAvatar" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/tvPublished"
            app:layout_constraintEnd_toStartOf="@id/ibMenu"
            app:layout_constraintStart_toEndOf="@id/ivAvatar"
            app:layout_constraintTop_toTopOf="@id/ivAvatar"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/tvPublished"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="@id/barrierTop"
            app:layout_constraintEnd_toStartOf="@id/ibMenu"
            app:layout_constraintStart_toEndOf="@id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@id/tvAuthor"
            tools:text="@sample/posts.json/data/published" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ibMenu"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="false"
            android:contentDescription="@string/description_post_menu"
            app:icon="@drawable/ic_more_vert_24"
            app:layout_constraintBottom_toBottomOf="@id/tvAuthor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvAuthor" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="ivAvatar,tvPublished,ibMenu" />

<!--        <ImageView-->
<!--            android:id="@+id/ivVideoPreview"-->
<!--            android:layout_width="320dp"-->
<!--            android:layout_height="128dp"-->
<!--            android:layout_marginStart="@dimen/common_spacing"-->
<!--            android:layout_marginTop="@dimen/common_spacing"-->
<!--            android:layout_marginEnd="@dimen/common_spacing"-->
<!--            android:autoLink="web"-->
<!--            android:visibility="visible"-->
<!--            app:layout_constraintBottom_toTopOf="@id/tvContent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/barrierTop"-->
<!--            tools:text="@sample/posts.json/data/content"-->
<!--            android:src="@color/purple_500"/>-->

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/playButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:visibility="visible"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/ivVideoPreview"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/ivVideoPreview"-->
<!--            app:layout_constraintHorizontal_bias="0.5"-->
<!--            app:layout_constraintStart_toStartOf="@+id/ivVideoPreview"-->
<!--            app:layout_constraintTop_toTopOf="@+id/ivVideoPreview"-->
<!--            app:srcCompat="@drawable/ic_play_button"/>-->

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:autoLink="web"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrierTop"
            tools:text="@sample/posts.json/data/content" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tvContent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrierContent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ibLike"
                    style="@style/Widget.AppTheme.LikeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:contentDescription="@string/description_post_like"
                    app:icon="@drawable/ic_like_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrierContent"
                    tools:checked="@sample/posts.json/data/likedByMe"
                    tools:text="@sample/posts.json/data/likes" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ibShare"
                    style="@style/Widget.AppTheme.ShareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="72dp"
                    android:checkable="false"
                    android:contentDescription="@string/description_share"
                    app:icon="@drawable/ic_baseline_share_24"
                    app:layout_constraintStart_toStartOf="@id/toggleButton"
                    tools:checked="@sample/posts.json/data/shares"
                    tools:layout_editor_absoluteY="280dp"
                    tools:text="@sample/posts.json/data/shares" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <ImageButton
            android:id="@+id/ibView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginEnd="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_post_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContent"
            app:srcCompat="@drawable/ic_baseline_visibility_24" />

        <TextView
            android:id="@+id/tvView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/ibView"
            app:layout_constraintStart_toEndOf="@id/ibView"
            app:layout_constraintTop_toTopOf="@+id/ibView"
            tools:text="999" />

</androidx.constraintlayout.widget.ConstraintLayout>